# FlowState

./: README.md  pyproject.toml
flowstate/: main.py  store.py
flowstate/sources/: base.py  psql_notify.py
tests/: test_flowstate.py
